06.15 Semi Final Commit